[package]
name = "cargo-livereload"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.6"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
log = "0.4.14"
chrono = "0.4"
env_logger = "0.8.3"
