[package]
name = "cargo-livereload"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
log = "0.4.14"
chrono = "0.4"
env_logger = "0.8.3"
tokio-tungstenite = "0.13.0"
tungstenite = "0.12.0"
futures-util = "*"
